feat: split Discord and TeamSpeak images